--- a/test3/pom.xml
+++ b/test3/pom.xml
@@ -38,6 +38,12 @@
     <artifactId>commons-dbcp2</artifactId>
     <version>2.0</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.jfrog.buildinfo/build-info-extractor-gradle -->
+<dependency>
+    <groupId>org.jfrog.buildinfo</groupId>
+    <artifactId>build-info-extractor-gradle</artifactId>
+    <version>4.28.1</version>
+</dependency>
 
 
   </dependencies>
